// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v0;

import "com/digitalasset/canton/crypto/v0/crypto.proto";
import "com/digitalasset/canton/protocol/v0/common.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

// Messages sent by a participant as part of the transaction protocol

// EncryptedViewMessage

message DeduplicationPeriod {
  oneof period {
    google.protobuf.Duration duration = 1;
    bytes offset = 2;
  }
}

message ParticipantMetadata {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  com.digitalasset.canton.crypto.v0.Salt salt = 1;
  google.protobuf.Timestamp ledger_time = 2;
  google.protobuf.Timestamp submission_time = 3;
  string workflow_id = 4; // optional
}

// RootHashMessage

message RootHashMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  bytes root_hash = 1;
  string domain_id = 2;
  ViewType view_type = 3;
  bytes payload = 4; // optional
}
